--- a/app/components/header/headerComponent.html
+++ b/app/components/header/headerComponent.html
@@ -1,1 +1,3 @@
-<h1>Monikers</h1>
+<div class="u-textCenter u-width-100 u-textUppercase colour-white bg-colour-babyBlue u-fontSize-36 u-padding-10-0 u-fontGotham-Medium"
+    ng-bind="'Monikers'">
+</div>
