--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -44,3 +44,184 @@
 
 .element-centered {
   text-align: center; }
+
+.colour-babyBlue {
+  color: #00cbff; }
+
+.colour-red {
+  color: red; }
+
+.colour-grey {
+  color: #a29292; }
+
+.colour-white {
+  color: white; }
+
+.colour-yellow {
+  color: #f7c5ff; }
+
+.colour-green {
+  color: #2cc36b; }
+
+.bg-colour-babyBlue {
+  background-color: #00cbff; }
+
+.bg-colour-red {
+  background-color: red; }
+
+.bg-colour-grey {
+  background-color: #a29292; }
+
+.bg-colour-white {
+  background-color: white; }
+
+.bg-colour-yellow {
+  background-color: #f7c5ff; }
+
+.bg-colour-green {
+  background-color: #2cc36b; }
+
+.u-textCenter {
+  text-align: center; }
+
+.u-textRight {
+  text-align: right; }
+
+.u-textUppercase {
+  text-transform: uppercase; }
+
+.u-margin-0-auto {
+  margin: 0 auto; }
+
+.u-display-block {
+  display: block; }
+
+.u-display-inlineBlock {
+  display: inline-block; }
+
+.u-display-block {
+  display: block; }
+
+.u-padding-10-0 {
+  padding: 10px 0; }
+
+.u-padding-10 {
+  padding: 10px; }
+
+.u-padding-10-20 {
+  padding: 10px 20px; }
+
+.u-padding-20 {
+  padding: 20px; }
+
+.u-width-100 {
+  width: 100%; }
+
+.u-height-100 {
+  height: 100%; }
+
+.u-fontSize-36 {
+  font-size: 36px; }
+
+.u-fontSize-28 {
+  font-size: 28px; }
+
+.u-fontSize-14 {
+  font-size: 14px; }
+
+.u-fontSize-18 {
+  font-size: 18px; }
+
+.u-fontSize-48 {
+  font-size: 48px; }
+
+.u-fontSize-30 {
+  font-size: 30px; }
+
+.u-fontGotham-Bold {
+  font-family: 'GothamRounded-Bold'; }
+
+.u-fontGotham-Medium {
+  font-family: 'GothamRounded-Medium'; }
+
+.u-fontGotham-Book {
+  font-family: 'GothamRounded-Book'; }
+
+.u-display-flex {
+  display: flex; }
+
+.u-flex-column {
+  flex-direction: column; }
+
+.flex-1 {
+  flex: 1; }
+
+.flex-2 {
+  flex: 2; }
+
+.flex-3 {
+  flex: 3; }
+
+.u-margin-10 {
+  margin: 10px; }
+
+.u-margin-0-auto {
+  margin: 0 auto; }
+
+.u-marginBottom-10 {
+  margin-bottom: 20px; }
+
+.u-border-none {
+  border: none; }
+
+.main {
+  height: 100vh; }
+
+.u-opacity-03 {
+  opacity: 0.3; }
+
+.u-border-standard {
+  border: 1px solid #a29292; }
+
+.u-border-babyBlue {
+  border: 1px solid #00cbff; }
+
+.u-border-red {
+  border: 1px solid red; }
+
+.u-box-shadow {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.26); }
+
+.c-btn {
+  font-family: 'GothamRounded-Medium';
+  font-size: 28px;
+  padding: 20px;
+  border: none;
+  width: 100%; }
+
+md-input-container:not(.md-input-invalid).md-input-focused .md-input {
+  border-color: #a29292; }
+
+md-input-container:not(.md-input-invalid).md-input-focused label {
+  color: #a29292; }
+
+md-dialog {
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  border-radius: 0; }
+
+.circle-90 {
+  width: 90px;
+  height: 90px;
+  -webkit-border-radius: 45px;
+  -moz-border-radius: 45px;
+  border-radius: 45px; }
+
+.circle-100 {
+  width: 100px;
+  height: 99px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px; }
